--- a/alipayModel/templates/alipayModel/index.html
+++ b/alipayModel/templates/alipayModel/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 {% if latest_goods_list %}
 	<hr>
 	<p>buy_old_MD5 :</p>
@@ -31,3 +31,13 @@
 {% else %}
 	<p>No Goods are available.</p>
 {% endif %}
+<div id="banner-message">
+	123
+</div>
+<script type="text/javascript">
+	var hiddenBox = $( "#banner-message" );
+$( "#button-container button" ).on( "click", function( event ) {
+  hiddenBox.show();
+});
+
+</script>
